--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -8,7 +8,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup"
+    "build": "tsup",
+    "dev": "tsup --watch"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +17,7 @@
   "packageManager": "pnpm@10.12.4",
   "peerDependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tsup": "^8.5.0",
-    "sass": "^1.89.2",
-    "esbuild-sass-plugin": "^3.3.1"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "react": "^19.1.0",
