--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,9 @@
 {
   "tasks": {
+    "dev": {
+      "dependsOn": ["^dev"],
+      "cache": false
+    },
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**", "build/**"]
