--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "build": "pnpm turbo run build"
+    "build": "pnpm turbo run build",
+    "dev": "pnpm turbo run dev"
   },
   "keywords": [],
   "author": "",
